--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 
    < img id="img1" src="voleibol-posicoes.webp">
 
-   <p class="p1"> insira um texto aqui </p>
+   <p class="p1"> O voleibol requer velocidade, agilidade e trabalho em equipe[1] .
+     Seja você um jogador experiente ou inexperiente,
+      bons jogadores sabem que há sempre espaço para melhorias.
+       Aprender quais técnicas de seu jogo podem melhorar pode ajudá-lo a desenvolvê-lo como um jogador, melhorando suas habilidades,
+        trabalho em equipe e seu desempenho atlético.
+
+   </p>
    <p class="p2"> insira outro texto aqui </p>
 
 </div>
