--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Minha página web<\title>
-        <Link rel="stylesheet" href="styles.css>
+        <Link rel="stylesheet" href="styles.css">
 </head>
 
 <header>
@@ -40,7 +40,10 @@
     <h2 id="titulo2"> insira um segundo titulo </h2>
 
 
+</div>
 
+</body>
+</html>
 
 
 
