--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <title>Minha página web<\title>
-        <Link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
 </head>
 
 <header>
