--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         trabalho em equipe e seu desempenho atlético.
 
    </p>
-   <p class="p2"> insira outro texto aqui </p>
+   <p class="p2"> Cada time é composto por 6 jogadores em quadra e 6 jogadores reserva.
+     Após o saque, cada time só poderá tocar a bola três vezes, sendo proibido que um jogador 
+     toque a bola duas vezes seguidas.  </p>
 
 </div>
 
@@ -37,7 +39,17 @@
 <div class="Beneficios">
  
 
-    <h2 id="titulo2"> insira um segundo titulo </h2>
+    <h2 id="titulo2"> volei saude  </h2>
+
+<ul>
+     <li class="iten1">dinheiro,saúde,disciplina </li>
+     <li class="iten2"> união,fama, fãns </li>
+     <li class="item3"> amigos,caragem,esforço </li>
+
+</ul>
+ 
+    <img id="img2" scr="voleibol-beneficios-600.webp"
+
 
 
 </div>
